--- a/templates/base_tasks.html
+++ b/templates/base_tasks.html
@@ -13,8 +13,7 @@
     <a href='{% url "accounts:change_password_view" %}'>Change Password</a> ||
     <a href='{% url "accounts:logout_view" %}'>Log Out</a> <br> <br>
     <a href='{% url "tasks:task_create_view" %}'>Create Task</a> ||
-    <a href='{% url "tasks:task_list_search_pending_view" %}'>Pending Task List</a> ||
-    <a href='{% url "tasks:task_list_search_completed_view" %}'>Completed Task List</a> <br> <br>
+    <a href='{% url "tasks:task_list_search_view" %}'>Search Task List</a> ||
     <a href="{% url 'tasks:task_list_filter' %}">Filter Task List</a>
 
     {% block content %}
