--- a/templates/base_tasks.html
+++ b/templates/base_tasks.html
@@ -1,23 +1,32 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/base.css' %}">
+    <title>Task Manager</title>
+        
 </head>
 <body>
-    <h1>Welcome to the world's top Task Manager</h1>
-    <h2>Welcome Mr. {{ user.username }}</h2>
-    <a href='/'>View Profile</a> ||
-    <a href='{% url "accounts:update_view" %}'>Update Profile</a> ||
-    <a href='{% url "accounts:change_password_view" %}'>Change Password</a> ||
-    <a href='{% url "accounts:logout_view" %}'>Log Out</a> <br> <br>
-    <a href='{% url "tasks:task_create_view" %}'>Create Task</a> ||
-    <a href='{% url "tasks:task_list_search_view" %}'>Search Task List</a> ||
-    <a href="{% url 'tasks:task_list_filter' %}">Filter Task List</a>
+    <header>
+        <h1>Welcome to the Task Manager</h1>
+        <h2>Welcome, Mr. {{ user.username }}</h2>
+    </header>
+    <nav>
+        <a href='/'>View Profile</a>
+        <a href='{% url "accounts:update_view" %}'>Update Profile</a>
+        <a href='{% url "accounts:change_password_view" %}'>Change Password</a>
+        <a href='{% url "tasks:task_create_view" %}'>Create Task</a>
+        <a href='{% url "tasks:task_list_search_view" %}'>Search Task List</a>
+        <a href="{% url 'tasks:task_list_filter' %}">Filter Task List</a>
+        <a href='{% url "accounts:logout_view" %}'>Log Out</a>
+    </nav>
 
-    {% block content %}
-
-    {% endblock content %}
+    <div class="content">
+        {% block content %}
+        {% endblock content %}
+    </div>
 </body>
 </html>
