--- a/templates/accounts/change_password.html
+++ b/templates/accounts/change_password.html
@@ -2,11 +2,13 @@
 
 {% block content %}
 
-<h2>Change Password</h2>
+<div class="element">
+  <h2>Change Password</h2>
   <form method="post" action="">
     {% csrf_token %}
     {{ change_password_form.as_p }}
     <button type="submit">Change Password</button>
   </form>
+</div>
 
 {% endblock content %}
