--- a/templates/accounts/login.html
+++ b/templates/accounts/login.html
@@ -2,6 +2,7 @@
 
 {% block content %}
 
+<div class="element">
 {% if not request.user.is_authenticated %}
 <div style="margin-top: 30px;">
     <form action="" method="POST">
@@ -15,5 +16,6 @@
 <p>You are already logged in. Would you like to logout?</p>
 <a href="/accounts/logout/">Logout</a>
 {% endif %}
+</div>
 
 {% endblock content %}
