--- a/templates/accounts/logout.html
+++ b/templates/accounts/logout.html
@@ -1,6 +1,8 @@
 {% extends "base_tasks.html" %}
 
 {% block content %}
+
+<div class="element">
 <h2>Log Out</h2>
 {% if request.user.is_authenticated %}
 <div style="margin-top: 30px;">
@@ -13,5 +15,6 @@
 <p>You are not logged in. Would you like to login?</p>
 <a href="/accounts/login/">Logout</a>
 {% endif %}
+</div>
 
 {% endblock content %}
