--- a/templates/accounts/update.html
+++ b/templates/accounts/update.html
@@ -2,9 +2,9 @@
 
 {% block content %}
 
+<div class="element">
 <h2>Update Profile</h2>
 {% if not updated %}
-
 <div style="margin-top: 30px;">
 <form action="." method="POST">
     {% csrf_token %}
@@ -12,7 +12,7 @@
     <button style="margin-top: 10px;" type="submit">Update Profile</button>
 </form>
 </div>
-
 {% endif %}
+</div>
 
 {% endblock content %}
