--- a/templates/tasks/task_create.html
+++ b/templates/tasks/task_create.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
+<div class="element">
 {% if not created %}
-
 <h2>Create Task</h2>
 <div style="margin-top: 30px;">
 <form action="" method="POST" enctype="multipart/form-data">
@@ -13,7 +13,7 @@
     <button style="margin-top: 10px;" type="submit">Create Task</button>
 </form>
 </div>
-
 {% endif %}
+</div>
 
 {% endblock content %}
