--- a/templates/tasks/task_list_filter.html
+++ b/templates/tasks/task_list_filter.html
@@ -2,8 +2,8 @@
 
 {% block content %}
 
+<div class="element">
 <h2>Filter Task List</h2>
-
 <form method="get" action="{% url 'tasks:task_list_filter' %}">
     <label for="priority">Priority:</label>
     <select name="priority" id="priority">
@@ -48,5 +48,6 @@
         </li>
     {% endfor %}
 </ol>
+</div>
 
 {% endblock content %}
